--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@racxsplide/react-splide",
+  "name": "racxsplide/react-splide",
   "version": "0.4.4",
   "description": "The Splide component for React.",
   "author": "Naotoshi Fujita",
